--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sketch-constructor": "^1.14.0",
     "source-map-support": "^0.5.12",
     "uuid": "^3.3.3",
-    "xml-formatter": "^1.2.0"
+    "xml-formatter": "^1.2.0",
+    "yargs": "^15.3.1"
   },
   "optionalDependencies": {
     "sharp": "^0.23.2"
