--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sketch-to-svg",
   "version": "1.0.2",
   "description": "Convert layers in a Sketch file to SVG",
+  "bin": "./bin/cli.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
